--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ env:
   EB_PACKAGE_S3_BUCKET_NAME : "daya01"
   EB_APPLICATION_NAME       : "MyFlask"
   EB_ENVIRONMENT_NAME       : "MyFlask-env"
-  DEPLOY_PACKAGE_NAME       : "flask-app-${{ github.sha }}.zip"
+  DEPLOY_PACKAGE_NAME       : "flask-app.zip"
   AWS_REGION_NAME           : "us-east-1"
 
 on: 
